# AuthLens

./: .eslintrc.cjs  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DESIGN_GUIDE.md  FEATURE_CHECKLIST.md
examples/cookie-session-app/: README.md  package.json  server.js
examples/jwt-app/: README.md  package.json  server.js
sidecar/: recorder.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: capture.rs  main.rs  replay.rs  save.rs  sessions.rs
src/analyzer/: analyze.ts  auth-headers.ts  auth-type.ts  discovered-endpoints.ts  events.ts  index.ts  jwt-locations.ts  login-credentials.ts  login-form.ts  noteworthy.ts  oauth-flow.ts
src/analyzer/artifacts/: diff.ts  index.ts  noteworthy.ts  raw-presence.ts  redirects.ts
src/analyzer/auth-type/: detect.ts  headers.ts  index.ts  oauth-validation.ts  oauth.ts
src/analyzer/baseline/: checks.ts  index.ts
src/analyzer/comparison/: compare.ts
src/analyzer/grading/: grade.ts  index.ts
src/analyzer/login/: credentials.ts  index.ts  logout.ts  scoring.ts
src/core/: constants.ts  index.ts  jwt.ts
src/core/masking/: index.ts  policy.ts
src/core/types/: auth.ts  errors.ts  index.ts  network.ts  sensitive.ts  snapshot.ts
src/core/util/: id.ts
src/recorder/: in-memory-recorder.ts  index.ts  playwright-adapter.ts  types.ts
src/reporter/: curl-fetch.ts  index.ts  json-export.ts  markdown.ts  mermaid.ts  postman.ts
src/storage/: in-memory-store.ts  index.ts  sqlite-store.ts  tauri-store.ts  types.ts
src/ui/: App.tsx  main.tsx
src/ui/components/: BrandIcon.tsx  FirstLaunchModal.tsx  MarkdownPreview.tsx  MermaidDiagram.tsx  ReplayModal.tsx  SequenceReplayModal.tsx  Sidebar.tsx  Spinner.tsx  Topbar.tsx
src/ui/demo/: sampleFlow.ts
src/ui/i18n/: index.ts  useReportStrings.ts
src/ui/i18n/locales/: en.json  (+1 more)
src/ui/pages/: Analysis.tsx  Capture.tsx  Compare.tsx  Home.tsx  Report.tsx  Settings.tsx
src/ui/state/: store.ts
src/ui/styles/: global.css  tokens.css
src/ui/tauri/: bridge.ts  sidecar-adapter.ts
src/ui/util/: download.ts
tests/analyzer/: auth-type.test.ts  diff.test.ts  discovered-endpoints.test.ts  integration.test.ts  login-credentials.test.ts  login-form.test.ts  login-scoring.test.ts  logout.test.ts  noteworthy.test.ts  oauth-flow.test.ts  test-helpers.ts
tests/analyzer/artifacts/: diff.test.ts  discovered-endpoints.test.ts  noteworthy.test.ts
tests/analyzer/auth-type/: detect.test.ts  oauth-validation.test.ts  oauth.test.ts
tests/analyzer/baseline/: checks.test.ts
tests/analyzer/comparison/: compare.test.ts
tests/analyzer/grading/: grade.test.ts
tests/analyzer/login/: credentials.test.ts  form.test.ts  logout.test.ts  scoring.test.ts
tests/core/: jwt.test.ts
tests/integration/: raw-reveal.test.ts
tests/recorder/: in-memory-recorder.test.ts
tests/reporter/: markdown-links.test.ts  markdown.test.ts  mermaid.test.ts
tests/storage/: in-memory-store.test.ts  in-memory-store.ts
(+1 files in other folders)
