[package]
name = "authlens"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Visualize and document authentication flows for authorized web applications."

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
# NOTE: do NOT add `"devtools"` to features below — devtools are auto-enabled
# in debug builds (`tauri dev`) and explicitly disabled in release. Captured
# auth data must not be inspectable in shipped binaries.
tauri = { version = "1.5", features = ["dialog-save"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["process", "io-util", "macros", "rt-multi-thread", "sync"] }
# Replay sandbox: send arbitrary captured HTTP requests, bypassing webview CORS.
# Rate limit / authorization enforced both UI-side and here (`replay::limit`).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip", "brotli"] }
url = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
