[package]
name = "authlens"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Visualize and document authentication flows for authorized web applications."

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
# NOTE: do NOT add `"devtools"` to features below — devtools are auto-enabled
# in debug builds (`tauri dev`) and explicitly disabled in release. Captured
# auth data must not be inspectable in shipped binaries.
tauri = { version = "1.5", features = ["dialog-save"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["process", "io-util", "macros", "rt-multi-thread", "sync"] }
# Replay sandbox: send arbitrary captured HTTP requests, bypassing webview CORS.
# Rate limit / authorization enforced both UI-side and here (`replay::limit`).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip", "brotli"] }
url = "2"
# Bundled SQLite for cross-platform predictability — ships in the binary so
# users don't need a system libsqlite3. Stores captured AuthFlow sessions
# across app restarts; required for the Compare feature to be meaningful.
rusqlite = { version = "0.31", features = ["bundled"] }
# Per-thread connection guard (keeps the SqliteSession handler `Send`).
parking_lot = "0.12"
# App data dir resolution (where the sqlite file lives).
dirs = "5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
